--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -25,21 +25,28 @@ $color-negro: rgb(29,29,27);
 $color-gris: rgb(60,60,59);
 $color-grisc: rgb(237,237,237);
 
-@media only screen and (max-width: 1024px){
+@media only all and (max-width: 1024px){
 	.secciontwo_image{
 		img{
 		width: 300px;
 		}
 	}
-	.secciontwo_title{
-	right: 50px;
-	font-family: oswaldbold;
-	font-size: 30px;
+	.header{
+		background-color: red;
 	}
-	.secciontwo_description{
-	right: 500px;
-	font-family: ralewaylight;
-	font-size: 14px;
-	}
+
 }
 
+@media only all and (max-width: 720px){
+	.seccionone_left {
+	display: table-row;
+	}
+	.seccionone_right {
+	display: table-row;
+	}
+	.seccionone_center {
+	display: table-row; 
+	}
+	
+
+}
